tests/diagnostics/statements/control_flow/unreachable_after_continue/expect.txt
# exit: 1
lib.coppice:4:9: error: unreachable code
          return 1
          ^
